--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-concurrent": "1.0.0",
     "grunt-connect-rewrite": "^0.2.1",
     "grunt-contrib-connect": "~0.8.0",
     "grunt-contrib-watch": "0.6.1",
