--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "qa-checklist",
   "version": "0.0.0",
-  "description": "QA Checklist for new sites.",
+  "description": "QA Checklist for new sites w/ The Lead Group.",
   "main": "web/index.html",
   "scripts": {
     "postinstall": "",
@@ -24,7 +24,6 @@
     "url": "git@bitbucket.org:Saturn2888/qa-checklist.git"
   },
   "author": "",
-  "license": "BSD",
-  "gitHead": "21e031aeba32b964bf1ce6d36cae6ce1036c29ba",
+  "license": "",
   "readmeFilename": "readme.md"
 }
